# pytorch-caney

./: .coveragerc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  setup.cfg  test.sh
.github/workflows/: build_docs.yml  ci.yml  codeql-analysis.yml  dockerhub-dev.yml  dockerhub.yml  lint.yml  pypi-publish.yml
configs/: 3dcloudtask_fcn_baseline_test.yaml  3dcloudtask_swinv2_satvision_giant_test.yaml  mim_pretrain_swinv2_satvision_giant_128_onecycle_100ep.yaml  mim_pretrain_swinv2_satvision_giant_128_onecycle_100ep_resume.yaml
docs/: conf.py  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst
examples/deepspeed/: multinode_deepspeed_launcher.sh
examples/frontier/: frontier_satvision_giant_runner.sh  (+1 more)
latest/: .buildinfo  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pytorch_caney.html  readme.html  search.html  searchindex.js
notebooks/: .panfs.2ac640a.1726866101518203341  mask_192.pt  mms_128.sav  satvision-toa-reconstruction-comparison-plotting-scaled.ipynb  satvision-toa-reconstruction-generation-scaled.ipynb  satvision-toa-reconstruction.ipynb  satvision-toa-reconstruction_giant.ipynb  satvision-toa-reconstruction_huge.ipynb  satvision_toa_modis_reconstruction_example_notebook.ipynb  tensorboard_load.ipynb  torch_tensorboard_example.ipynb
pytorch_caney/: config.py  inference.py  logging.py  losses.py  lr_scheduler.py  metrics.py  processing.py  ptc_cli.py  utils.py
requirements/: Dockerfile  Dockerfile.dev  README.md  environment_gpu.yml  requirements-test.txt  requirements.txt
(+191 files in other folders)
