[metadata]
name = pytorch-caney
version = attr: pytorch_caney.__version__
description = Methods for pytorch deep learning applications
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch-caney, deep-learning, machine-learning
url = https://github.com/nasa-nccs-hpda/pytorch-caney
author = jordancaraballo
author_email = jordan.a.caraballo-vega@nasa.gov
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-nccs-hpda/pytorch-caney
    Source = https://github.com/nasa-nccs-hpda/pytorch-caney
    Issues = https://github.com/nasa-nccs-hpda/pytorch-caney/issues

[options]
packages = find:
zip_safe = True
include_package_data = True
platforms = any
python_requires = >= 3.7
install_requires =
    omegaconf
    numpy
    pandas
    tqdm
    xarray
    rioxarray
    numba

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s
